--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".guardian.GuardianActivity"></activity>
         <activity android:name=".generatecode.GenerateCodeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".checkcode.CheckCodeActivity" />
+
+        <activity android:name=".guardian.GuardianActivity"/>
 
         <receiver
             android:name=".otp.SMSBroadcastReceiver"
